Update landing page heading

--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
     <body>
         <div id="content">
             <img src="uqmc.png" width=400 height=122 />
-            <h1>Whip up some stoke...</h1>
+            <h1>GET STOKED...</h1>
     
             <p>
                 A beautiful, new website is coming for Semester 1,
