Make acceptably mobile-responsive and add rule

--- a/web/index.html
+++ b/web/index.html
@@ -16,12 +16,12 @@
     </head>
     <body>
         <div id="content">
-            <img src="uqmc.png" width=400 height=122 />
+            <img src="uqmc.png" alt="mountain club logo" class="img-responsive" />
+            <hr>
             <h1>GET STOKED...</h1>
-    
             <p>
-                A beautiful, new website is coming for Semester 1,
-                2021. 
+                A beautiful, new website is coming for <b>Semester 1,
+                2021.</b>
                 <br>
                 In the meantime, find up-to-date information on
                 our <a href="https://www.facebook.com/groups/uqmountainclub/">FaceBook page</a>!
