Remove superfluous classname

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="content">
-            <img src="uqmc.png" alt="mountain club logo" class="img-responsive" />
+            <img src="uqmc.png" alt="mountain club logo" />
             <hr>
             <h1>GET STOKED...</h1>
             <p>
